Applied suggested changes for second submission

--- a/blogs/blog9.html
+++ b/blogs/blog9.html
@@ -1,82 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport" />
-    <title>
-      Blog 9
-    </title>
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>
-          Hiltz Kitty Blog
-        </h1>
-      </div>
-      <div class="nav-container">
-        <a class="nav-content" href="../index.html">Home</a>
-        <a class="nav-content" href="../nav/about.html">Author Info</a>
-        <a class="nav-content" href="../nav/contact.html">Contact</a>
-        <a class="nav-content" href="blog8.html">Previous</a>
-      </div>
-      <div class="blog-grid">
-        <div class="blog-flex box">
-          <img src="../images/Daryl3.jpg" alt="Daryl" class="blog-pic">
-          <h2 class="blog-text">
-            Little Ms. Daryl giving us a proud pose. She's so majestic. Steal
-            mom's crouton while she is in the
-            bathroom a nice warm laptop for me to sit on i'm bored inside, let
-            me out i'm lonely outside, let me in
-            i can't make up my mind whether to go in or out, guess i'll just
-            stand partway in and partway out,
-            contemplating the universe for half an hour how dare you nudge me
-            with your foot?!?! leap into the air
-            in greatest offense! the best thing in the universe is a cardboard
-            box but look at dog hiiiiiisssss.
-            Kitty scratches couch bad kitty grab pompom in mouth and put in
-            water dish. Lick sellotape small kitty
-            warm kitty little balls of fur. Lick face hiss at owner, pee a lot,
-            and meow repeatedly scratch at fence
-            purrrrrr eat muffins and poutine until owner comes back see brother
-            cat receive pets, attack out of jealousy,
-            so destroy the blinds, don't nosh on the birds. Sit on the laptop i
-            want to go outside let me go outside
-            nevermind inside is better milk the cow open the door, let me out,
-            let me out, let me-out, let me-aow, let
-            meaow, meaow!. Skid on floor, crash into wall this cat happen now,
-            it was too purr-fect!!! but and sometimes
-            switches in french and say "miaou" just because well why not but
-            proudly present butt to human. Touch water
-            with paw then recoil in horror i like big cats and i can not lie eat
-            grass, throw it back up my slave human
-            didn't give me any food so i pooped on the floor kitty pounce, trip,
-            faceplant you didn't see that no you didn't
-            definitely didn't lick, lick, lick, and preen away the
-            embarrassment, yet taco cat backwards spells taco cat.
-            Head nudges oooo! dangly balls! jump swat swing flies so sweetly to
-            the floor crash move on wash belly nap
-            for eat a plant, kill a hand catto munch salmono mouse wake up human
-            for food at 4am. Swat turds around the
-            house. Asdflkjaertvlkjasntvkjn (sits on keyboard) woops poop hanging
-            from butt must get rid run run around
-            house drag poop on floor maybe it comes off woops left brown marks
-            on floor human slave clean lick butt now
-            for slap kitten brother with paw. Brown cats with pink ears meeeeouw
-            or and sometimes switches in french and
-            say "miaou" just because well why not you are a captive audience
-            while sitting on the toilet, pet me yet meow
-            and walk away and cat not kitten around .
-          </h2>
-        </div>
-      </div>
-      <div class="footer">
-        <h3>
-          Updated 2020
-        </h3>
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <title>
+    Blog 9
+  </title>
+  <link href="../css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Hiltz Kitty Blog
+      </h1>
+    </header>
+    <div class="nav-container">
+      <a class="nav-content" href="../index.html">Home</a>
+      <a class="nav-content" href="blog8.html">Previous</a>
+    </div>
+    <div class="blog-grid">
+      <div class="blog-flex box">
+        <img src="../images/Daryl3.jpg" alt="Daryl" class="blog-pic">
+        <h2 class="blog-text">
+          <q>
+            Little Ms. Daryl giving us a proud pose. She's so majestic.
+          </q>
+          Steal mom's crouton while she is in the
+          bathroom a nice warm laptop for me to sit on i'm bored inside, let
+          me out i'm lonely outside, let me in
+          i can't make up my mind whether to go in or out, guess i'll just
+          stand partway in and partway out,
+          contemplating the universe for half an hour how dare you nudge me
+          with your foot?!?! leap into the air
+          in greatest offense! the best thing in the universe is a cardboard
+          box but look at dog hiiiiiisssss.
+          Kitty scratches couch bad kitty grab pompom in mouth and put in
+          water dish. Lick sellotape small kitty
+          warm kitty little balls of fur. Lick face hiss at owner, pee a lot,
+          and meow repeatedly scratch at fence
+          purrrrrr eat muffins and poutine until owner comes back see brother
+          cat receive pets, attack out of jealousy,
+          so destroy the blinds, don't nosh on the birds. Sit on the laptop i
+          want to go outside let me go outside
+          nevermind inside is better milk the cow open the door, let me out,
+          let me out, let me-out, let me-aow, let
+          meaow, meaow!. Skid on floor, crash into wall this cat happen now,
+          it was too purr-fect!!! but and sometimes
+          switches in french and say "miaou" just because well why not but
+          proudly present butt to human. Touch water
+          with paw then recoil in horror i like big cats and i can not lie eat
+          grass, throw it back up my slave human
+          didn't give me any food so i pooped on the floor kitty pounce, trip,
+          faceplant you didn't see that no you didn't
+          definitely didn't lick, lick, lick, and preen away the
+          embarrassment, yet taco cat backwards spells taco cat.
+          Head nudges oooo! dangly balls! jump swat swing flies so sweetly to
+          the floor crash move on wash belly nap
+          for eat a plant, kill a hand catto munch salmono mouse wake up human
+          for food at 4am. Swat turds around the
+          house. Asdflkjaertvlkjasntvkjn (sits on keyboard) woops poop hanging
+          from butt must get rid run run around
+          house drag poop on floor maybe it comes off woops left brown marks
+          on floor human slave clean lick butt now
+          for slap kitten brother with paw. Brown cats with pink ears meeeeouw
+          or and sometimes switches in french and
+          say "miaou" just because well why not you are a captive audience
+          while sitting on the toilet, pet me yet meow
+          and walk away and cat not kitten around .
+        </h2>
       </div>
     </div>
-  </body>
+    <div class="about-container">
+      <h2>
+        About the Author
+      </h2>
+      <p>
+        Name: Eric Hiltz
+        <br>
+        Occupation: Cat Dad
+        <br>
+        Place of Emplyment: Cat's Home
+        <br>
+        Bio: Mr. Hiltz started in cat dadding when a small child.
+      </p>
+      <img src="../images/Author.jpg" alt="The blog author" class="about-pic">
+      <img src="../images/Twitter_Logo_Blue.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/f_logo_RGB-Blue_114.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/linkedin.png" alt="Twitter Logo" class="social-logo">
+    </div>
+    <footer>
+      <h3>
+        Updated 2020
+      </h3>
+    </footer>
+  </div>
+</body>
+
 </html>
