--- a/index.html
+++ b/index.html
@@ -1,123 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport" />
-    <title>
-      Hiltz Blog Site
-    </title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>
-          Hiltz Kitty Blog
-        </h1>
-      </div>
-      <div class="nav-container">
-        <a class="nav-content" href="index.html">Home</a>
-        <a class="nav-content" href="nav/about.html">Author Info</a>
-        <a class="nav-content" href="nav/contact.html">Contact</a>
-      </div>
-      <div class="blog-preview-grid">
-        <!-- blog 1 -->
-        <div class="blog-flex-preview box">
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <title>
+    Hiltz Blog Site
+  </title>
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Hiltz Kitty Blog
+      </h1>
+    </header>
+    <div class="nav-container">
+      <a class="nav-content" href="index.html">Home</a>
+      <a class="nav-content" href="nav/about.html">Author Info</a>
+      <a class="nav-content" href="nav/contact.html">Contact</a>
+    </div>
+    <div class="blog-preview-grid">
+      <!-- blog 1 -->
+      <div class="blog-flex-preview box">
+        <figure>
           <img src="images/Both1.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            Best buds
-          </p>
-          <a href="blogs/blog1.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 2 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            So fierce
-          </p>
-          <a href="blogs/blog2.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 3 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Daryl1.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-pic-text">
-            Daryl is confused
-          </p>
-          <a href="blogs/blog3.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 4 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            Daryl protecting Rumbles
-          </p>
-          <a href="blogs/blog4.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 5 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            Scary Rumbles
-          </p>
-          <a href="blogs/blog5.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 6 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Daryl2.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-pic-text">
-            Pst... Here's a blep for ya
-          </p>
-          <a href="blogs/blog6.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 7 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Both3.jpg" alt="Daryl and Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            Protectors of the realm
-          </p>
-          <a href="blogs/blog7.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 8 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
-          <p class="blog-pic-text">
-            Lookin sharp Rumbles
-          </p>
-          <a href="blogs/blog8.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
-        <!-- blog 9 -->
-        <div class="blog-flex-preview box">
-          <img src="images/Daryl3.jpg" alt="Daryl" class="blog-pic">
-          <p class="blog-pic-text">
-            Daryl is such a proud kitty
-          </p>
-          <a href="blogs/blog9.html" class="buttontext button">
-            Go to Blog
-          </a>
-        </div>
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Best buds
+        </p>
+        <a href="blogs/blog1.html" class="buttontext button">
+          Go to Blog
+        </a>
       </div>
-      <div class="footer">
-        <h3>
-          Updated 2020
-        </h3>
+      <!-- blog 2 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Rumbles1.jpg" alt="Rumbles" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          So fierce
+        </p>
+        <a href="blogs/blog2.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 3 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Daryl1.jpg" alt="Daryl" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Daryl is confused
+        </p>
+        <a href="blogs/blog3.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 4 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Both2.jpg" alt="Daryl and Rumbles" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Daryl protecting Rumbles
+        </p>
+        <a href="blogs/blog4.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 5 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Rumbles2.jpg" alt="Rumbles" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Scary Rumbles
+        </p>
+        <a href="blogs/blog5.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 6 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Daryl2.jpg" alt="Daryl" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Pst... Here's a blep for ya
+        </p>
+        <a href="blogs/blog6.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 7 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Both3.jpg" alt="Daryl and Rumbles" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Protectors of the realm
+        </p>
+        <a href="blogs/blog7.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 8 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Lookin sharp Rumbles
+        </p>
+        <a href="blogs/blog8.html" class="buttontext button">
+          Go to Blog
+        </a>
+      </div>
+      <!-- blog 9 -->
+      <div class="blog-flex-preview box">
+        <figure>
+          <img src="images/Daryl3.jpg" alt="Daryl" class="blog-pic">
+          <figcaption>CATS!</figcaption>
+        </figure>
+        <p class="blog-pic-text">
+          Daryl is such a proud kitty
+        </p>
+        <a href="blogs/blog9.html" class="buttontext button">
+          Go to Blog
+        </a>
       </div>
     </div>
-  </body>
+    <footer>
+      <h3>
+        Updated 2020
+      </h3>
+    </footer>
+  </div>
+</body>
+
 </html>
