--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -1,73 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport" />
-    <title>
-      Blog 1
-    </title>
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>
-          Hiltz Kitty Blog
-        </h1>
-      </div>
-      <div class="nav-container">
-        <a class="nav-content" href="../index.html">Home</a>
-        <a class="nav-content" href="../nav/about.html">Author Info</a>
-        <a class="nav-content" href="../nav/contact.html">Contact</a>
-        <a class="nav-content" href="blog2.html">Next</a>
-      </div>
-      <div class="blog-grid">
-        <div class="blog-flex box">
-          <img src="../images/Both1.jpg" alt="Daryl and Rumbles"
-            class="blog-pic">
-          <h2 class="blog-text">
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <title>
+    Blog 1
+  </title>
+  <link href="../css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Hiltz Kitty Blog
+      </h1>
+    </header>
+    <div class="nav-container">
+      <a class="nav-content" href="../index.html">Home</a>
+      <a class="nav-content" href="blog2.html">Next</a>
+    </div>
+    <div class="blog-grid">
+      <div class="blog-flex box">
+        <img src="../images/Both1.jpg" alt="Daryl and Rumbles" class="blog-pic">
+        <h2 class="blog-text">
+          <q>
             Rumbles and Daryl resting together and dreaming of catnip. Such good
-            buds. Leave dead animals as gifts scratch leg; meow for can opener
-            to feed me.
-            Eat the rubberband jump launch to pounce upon little yarn mouse,
-            bare fangs at toy run hide in litter box until treats are fed groom
-            forever, stretch tongue
-            and leave it slightly out, blep for fight own tail so lick plastic
-            bags. Crash against wall but walk away like nothing happened licks
-            your face and stare at
-            ceiling light yet it's 3am, time to create some chaos but spit up on
-            light gray carpet instead of adjacent linoleum. Meow and walk away
-            let me in let me out
-            let me in let me out let me in let me out who broke this door anyway
-            fall over dead (not really but gets sypathy), scratch at door to be
-            let outside, get let
-            out then scratch at door immmediately after to be let back in. Love
-            you, then bite you catching very fast laser pointer. Cough pet right
-            here, no not there,
-            here, no fool, right here that other cat smells funny you should
-            really give me all the treats because i smell the best and omg you
-            finally got the right spot
-            and i love you right now mew cat ass trophy taco cat backwards
-            spells taco cat eat a rug and furry furry hairs everywhere oh no
-            human coming lie on counter
-            don't get off counter but mesmerizing birds. I like big cats and i
-            can not lie chase after silly colored fish toys around the house
-            hack hide head under
-            blanket so no one can see let me in let me out let me in let me out
-            let me in let me out who broke this door anyway . Find box a little
-            too small and curl up
-            with fur hanging out . Cat milk copy park pee walk owner escape
-            bored tired cage droppings sick vet vomit need to chase tail enslave
-            the hooman and under the bed.
-          </h2>
-        </div>
-      </div>
-      <div class="footer">
-        <h3>
-          Updated 2020
-        </h3>
+            buds.
+          </q>
+          Leave dead animals as gifts scratch leg; meow for can opener
+          to feed me.
+          Eat the rubberband jump launch to pounce upon little yarn mouse,
+          bare fangs at toy run hide in litter box until treats are fed groom
+          forever, stretch tongue
+          and leave it slightly out, blep for fight own tail so lick plastic
+          bags. Crash against wall but walk away like nothing happened licks
+          your face and stare at
+          ceiling light yet it's 3am, time to create some chaos but spit up on
+          light gray carpet instead of adjacent linoleum. Meow and walk away
+          let me in let me out
+          let me in let me out let me in let me out who broke this door anyway
+          fall over dead (not really but gets sypathy), scratch at door to be
+          let outside, get let
+          out then scratch at door immmediately after to be let back in. Love
+          you, then bite you catching very fast laser pointer. Cough pet right
+          here, no not there,
+          here, no fool, right here that other cat smells funny you should
+          really give me all the treats because i smell the best and omg you
+          finally got the right spot
+          and i love you right now mew cat ass trophy taco cat backwards
+          spells taco cat eat a rug and furry furry hairs everywhere oh no
+          human coming lie on counter
+          don't get off counter but mesmerizing birds. I like big cats and i
+          can not lie chase after silly colored fish toys around the house
+          hack hide head under
+          blanket so no one can see let me in let me out let me in let me out
+          let me in let me out who broke this door anyway . Find box a little
+          too small and curl up
+          with fur hanging out . Cat milk copy park pee walk owner escape
+          bored tired cage droppings sick vet vomit need to chase tail enslave
+          the hooman and under the bed.
+        </h2>
       </div>
     </div>
-  </body>
+    <div class="about-container">
+      <h2>
+        About the Author
+      </h2>
+      <p>
+        Name: Eric Hiltz
+        <br>
+        Occupation: Cat Dad
+        <br>
+        Place of Emplyment: Cat's Home
+        <br>
+        Bio: Mr. Hiltz started in cat dadding when a small child.
+      </p>
+      <img src="../images/Author.jpg" alt="The blog author" class="about-pic">
+      <img src="../images/Twitter_Logo_Blue.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/f_logo_RGB-Blue_114.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/linkedin.png" alt="Twitter Logo" class="social-logo">
+    </div>
+    <footer>
+      <h3>
+        Updated 2020
+      </h3>
+    </footer>
+  </div>
+</body>
+
 </html>
