--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -1,60 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport" />
-    <title>
-      Blog 3
-    </title>
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>
-          Hiltz Kitty Blog
-        </h1>
-      </div>
-      <div class="nav-container">
-        <a class="nav-content" href="../index.html">Home</a>
-        <a class="nav-content" href="../nav/about.html">Author Info</a>
-        <a class="nav-content" href="../nav/contact.html">Contact</a>
-        <a class="nav-content" href="blog2.html">Previous</a>
-        <a class="nav-content" href="blog4.html">Next</a>
-      </div>
-      <div class="blog-grid">
-        <div class="blog-flex box">
-          <img src="../images/Daryl1.jpg" alt="Daryl" class="blog-pic">
-          <h2 class="blog-text">
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <title>
+    Blog 3
+  </title>
+  <link href="../css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Hiltz Kitty Blog
+      </h1>
+    </header>
+    <div class="nav-container">
+      <a class="nav-content" href="../index.html">Home</a>
+      <a class="nav-content" href="blog2.html">Previous</a>
+      <a class="nav-content" href="blog4.html">Next</a>
+    </div>
+    <div class="blog-grid">
+      <div class="blog-flex box">
+        <img src="../images/Daryl1.jpg" alt="Daryl" class="blog-pic">
+        <h2 class="blog-text">
+          <q>
             I think someone said something to offend Ms. Daryl. What did they
-            say?! Catty ipsum. Run outside as soon as
-            door open stuff and things or meow meow. Cat cat moo moo lick ears
-            lick paws hunt by meowing loudly at 5am next to
-            human slave food dispenser chase mice. Destroy couch don't nosh on
-            the birds. Cat slap dog in face missing until
-            dinner time. Cat ass trophy unwrap toilet paper tweeting a baseball,
-            yet kitty poochy. Cereal boxes make for five
-            star accommodation kitty loves pigs. Catasstrophe throwup on your
-            pillow, and found somthing move i bite it tail
-            find box a little too small and curl up with fur hanging out . Jump
-            around on couch, meow constantly until given
-            food, love you, then bite you. Eat fish on floor. Rub butt on table
-            i bet my nine lives on you-oooo-ooo-hooo x lay
-            on arms while you're using the keyboard. Decide to want nothing to
-            do with my owner today gnaw the corn cob or man
-            running from cops stops to pet cats, goes to jail yet i like cats
-            because they are fat and fluffy chase laser i show
-            my fluffy belly but it's a trap! if you pet it i will tear up your
-            hand or be superior.
-          </h2>
-        </div>
-      </div>
-      <div class="footer">
-        <h3>
-          Updated 2020
-        </h3>
+            say?!
+          </q>
+          Catty ipsum. Run outside as soon as
+          door open stuff and things or meow meow. Cat cat moo moo lick ears
+          lick paws hunt by meowing loudly at 5am next to
+          human slave food dispenser chase mice. Destroy couch don't nosh on
+          the birds. Cat slap dog in face missing until
+          dinner time. Cat ass trophy unwrap toilet paper tweeting a baseball,
+          yet kitty poochy. Cereal boxes make for five
+          star accommodation kitty loves pigs. Catasstrophe throwup on your
+          pillow, and found somthing move i bite it tail
+          find box a little too small and curl up with fur hanging out . Jump
+          around on couch, meow constantly until given
+          food, love you, then bite you. Eat fish on floor. Rub butt on table
+          i bet my nine lives on you-oooo-ooo-hooo x lay
+          on arms while you're using the keyboard. Decide to want nothing to
+          do with my owner today gnaw the corn cob or man
+          running from cops stops to pet cats, goes to jail yet i like cats
+          because they are fat and fluffy chase laser i show
+          my fluffy belly but it's a trap! if you pet it i will tear up your
+          hand or be superior.
+        </h2>
       </div>
     </div>
-  </body>
+    <div class="about-container">
+      <h2>
+        About the Author
+      </h2>
+      <p>
+        Name: Eric Hiltz
+        <br>
+        Occupation: Cat Dad
+        <br>
+        Place of Emplyment: Cat's Home
+        <br>
+        Bio: Mr. Hiltz started in cat dadding when a small child.
+      </p>
+      <img src="../images/Author.jpg" alt="The blog author" class="about-pic">
+      <img src="../images/Twitter_Logo_Blue.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/f_logo_RGB-Blue_114.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/linkedin.png" alt="Twitter Logo" class="social-logo">
+    </div>
+    <footer>
+      <h3>
+        Updated 2020
+      </h3>
+    </footer>
+  </div>
+</body>
+
 </html>
