--- a/blogs/blog8.html
+++ b/blogs/blog8.html
@@ -1,70 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1"
-      name="viewport" />
-    <title>
-      Blog 8
-    </title>
-    <link href="../css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>
-          Hiltz Kitty Blog
-        </h1>
-      </div>
-      <div class="nav-container">
-        <a class="nav-content" href="../index.html">Home</a>
-        <a class="nav-content" href="../nav/about.html">Author Info</a>
-        <a class="nav-content" href="../nav/contact.html">Contact</a>
-        <a class="nav-content" href="blog7.html">Previous</a>
-        <a class="nav-content" href="blog9.html">Next</a>
-      </div>
-      <div class="blog-grid">
-        <div class="blog-flex box">
-          <img src="../images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
-          <h2 class="blog-text">
-            Rumbles checking out himself in the mirror. He's so dapper. While
-            happily ignoring when being called missing
-            until dinner time, or mark territory white cat sleeps on a black
-            shirt snuggles up to shoulders or knees and
-            purrs you to sleep. Poop in litter box, scratch the walls nap all
-            day. I like big cats and i can not lie russian
-            blue, yet Gate keepers of hell spend six hours per day washing, but
-            still have a crusty butthole, and shake treat
-            bag, and humans,humans, humans oh how much they love us felines we
-            are the center of attention they feed, they
-            clean . Humans,humans, humans oh how much they love us felines we
-            are the center of attention they feed, they
-            clean stare at owner accusingly then wink. Chase after silly colored
-            fish toys around the house cat cat moo moo
-            lick ears lick paws or cat mojo pretend not to be evil lick butt and
-            make a weird face. Freak human out make
-            funny noise mow mow mow mow mow mow success now attack human catty
-            ipsum so bite nose of your human stares at
-            human while pushing stuff off a table lick butt and make a weird
-            face chase after silly colored fish toys around
-            the house. Demand to be let outside at once, and expect owner to
-            wait for me as i think about it sleep everywhere,
-            but not in my bed for this is the day pee in human's bed until he
-            cleans the litter box. Going to catch the red
-            dot today going to catch the red dot today. Scamper sleep on dog
-            bed, force dog to sleep on floor and as lick i
-            the shoes spend six hours per day washing, but still have a crusty
-            butthole instead of drinking water from the cat
-            bowl, make sure to steal water from the toilet play riveting piece
-            on synthesizer keyboard.
-          </h2>
-        </div>
-      </div>
-      <div class="footer">
-        <h3>
-          Updated 2020
-        </h3>
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <title>
+    Blog 8
+  </title>
+  <link href="../css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        Hiltz Kitty Blog
+      </h1>
+    </header>
+    <div class="nav-container">
+      <a class="nav-content" href="../index.html">Home</a>
+      <a class="nav-content" href="blog7.html">Previous</a>
+      <a class="nav-content" href="blog9.html">Next</a>
+    </div>
+    <div class="blog-grid">
+      <div class="blog-flex box">
+        <img src="../images/Rumbles3.jpg" alt="Rumbles" class="blog-pic">
+        <h2 class="blog-text">
+          <q>
+            Rumbles checking out himself in the mirror. He's so dapper.
+          </q>
+          While
+          happily ignoring when being called missing
+          until dinner time, or mark territory white cat sleeps on a black
+          shirt snuggles up to shoulders or knees and
+          purrs you to sleep. Poop in litter box, scratch the walls nap all
+          day. I like big cats and i can not lie russian
+          blue, yet Gate keepers of hell spend six hours per day washing, but
+          still have a crusty butthole, and shake treat
+          bag, and humans,humans, humans oh how much they love us felines we
+          are the center of attention they feed, they
+          clean . Humans,humans, humans oh how much they love us felines we
+          are the center of attention they feed, they
+          clean stare at owner accusingly then wink. Chase after silly colored
+          fish toys around the house cat cat moo moo
+          lick ears lick paws or cat mojo pretend not to be evil lick butt and
+          make a weird face. Freak human out make
+          funny noise mow mow mow mow mow mow success now attack human catty
+          ipsum so bite nose of your human stares at
+          human while pushing stuff off a table lick butt and make a weird
+          face chase after silly colored fish toys around
+          the house. Demand to be let outside at once, and expect owner to
+          wait for me as i think about it sleep everywhere,
+          but not in my bed for this is the day pee in human's bed until he
+          cleans the litter box. Going to catch the red
+          dot today going to catch the red dot today. Scamper sleep on dog
+          bed, force dog to sleep on floor and as lick i
+          the shoes spend six hours per day washing, but still have a crusty
+          butthole instead of drinking water from the cat
+          bowl, make sure to steal water from the toilet play riveting piece
+          on synthesizer keyboard.
+        </h2>
       </div>
     </div>
-  </body>
+    <div class="about-container">
+      <h2>
+        About the Author
+      </h2>
+      <p>
+        Name: Eric Hiltz
+        <br>
+        Occupation: Cat Dad
+        <br>
+        Place of Emplyment: Cat's Home
+        <br>
+        Bio: Mr. Hiltz started in cat dadding when a small child.
+      </p>
+      <img src="../images/Author.jpg" alt="The blog author" class="about-pic">
+      <img src="../images/Twitter_Logo_Blue.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/f_logo_RGB-Blue_114.png" alt="Twitter Logo" class="social-logo">
+      <img src="../images/linkedin.png" alt="Twitter Logo" class="social-logo">
+    </div>
+    <footer>
+      <h3>
+        Updated 2020
+      </h3>
+    </footer>
+  </div>
+</body>
+
 </html>
