Added some required tags <b>, <i>, <u> and <blockquote>.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <h1>
         Hiltz Kitty Blog
       </h1>
+      <h2>
+        Here are <u>some</u> <b>fun</b> cat <i>pictures</i> to look at. 
+        <blockquote>
+          Get ready for fun!
+        </blockquote>
+      </h2>
     </header>
     <div class="nav-container">
       <a class="nav-content" href="index.html">Home</a>
